# rust-training-halima

./: Cargo.toml
attribute/: Cargo.toml
attribute/src/: main.rs
attribute_derive/: Cargo.toml
attribute_derive/src/: main.rs
attribute_diagnos/: Cargo.toml
attribute_diagnos/src/: main.rs
by_ref/: Cargo.toml
by_ref/src/: main.rs
chain/src/: main.rs
cloned/: Cargo.toml
cloned/src/: main.rs
collection/src/: main.rs
condition/: Cargo.toml
condition/src/: main.rs
consumed_iter/: Cargo.toml
consumed_iter/src/: main.rs
cycle/: Cargo.toml
cycle/src/: main.rs
enums/src/: main.rs
extend/: Cargo.toml
extend/src/: main.rs
file_read/: Cargo.toml
file_read/src/: main.rs
filter_maps/: Cargo.toml
filter_maps/src/: main.rs
filters/src/: main.rs
flat_maps/: Cargo.toml
flat_maps/src/: main.rs
functions/src/: main.rs
generic_struct/src/: main.rs
generic_trait/: Cargo.toml
generic_trait/src/: main.rs
halimalib/: Cargo.toml
halimalib/src/: halima.rs  lib.rs
iter_enum/: Cargo.toml
iter_enum/src/: main.rs
iterators/src/: main.rs
makes/: Cargo.toml
makes/src/: main.rs
maps/src/: main.rs
memory/src/: main.rs
modules/: Cargo.toml
modules/src/: khouloud.rs  main.rs
partition/src/: main.rs
peekable/: Cargo.toml
peekable/src/: main.rs
ranges/src/: main.rs
references/src/: main.rs
reverse/src/: main.rs
scans/: Cargo.toml
skip/: Cargo.toml
splitting/: Cargo.toml
stdin/: Cargo.toml
swapping/: Cargo.toml
vm_example/: Cargo.toml
vm_example_macro/: Cargo.toml
write/: Cargo.toml
zip/: Cargo.toml
(+17 files in other folders)
