[workspace]
members = [
    "variables", 
    "modules",
    "tables",
    "tuples",
    "vectors",
    "memory",
    "references",
    "slices",
    "strings", 
    "enums",
    "functions",
    "structs",
    "traits",
    "generic_struct",
    "condition",
    "halimalib",
    "tuto",
    "iterators",
    "generic_trait",
    "maps",
    "filters",
    "filter_maps",
    "flat_maps", 
    "scans",
    "makes",
    "skip", 
    "peekable",
    "reverse", 
    "chain",
    "iter_enum", 
    "zip",
    "cloned",
    "by_ref",
    "cycle",
    "consumed_iter",
    "extend",
    "partition",
    "collection",
    "splitting"
]